// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fileInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        style="--uv_1d8tbmb0: 100%;"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <label
            class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsl uv_1do42ls1a uv_1do42ls32"
            for="_r_0_"
          >
            Test
          </label>
          <input
            class="uv_z4f2649"
            id="_r_0_"
            name="Test"
            type="file"
          />
          <div
            class="uv_z4f2640 uv_z4f2642 uv_z4f2644"
            data-testid="drag-container"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzi uv_icons_1sbwqkz1g"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42ls16 uv_1do42ls1a uv_1do42ls32"
              style="--uv_1giziax0: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly as an overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <div
          data-testid="drag-container"
        >
          <input
            aria-label="Test"
            class="uv_z4f2649"
            id="_r_c_"
            name="test"
            type="file"
          />
          <div
            class="uv_z4f264c"
          >
            overlay
            <div
              class="uv_z4f264e uv_z4f264d"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        style="--uv_1d8tbmb0: 100%;"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <label
            class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsl uv_1do42ls1a uv_1do42ls32"
            for="_r_6_"
          >
            Test
          </label>
          <div
            class="uv_z4f2640 uv_z4f2641 uv_z4f2642 uv_z4f2644"
            data-testid="drag-container"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzi uv_icons_1sbwqkzk"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1do42ls0 uv_1do42ls1 uv_1do42ls4 uv_1do42lsb uv_1do42ls16 uv_1do42ls22"
              style="--uv_1giziax0: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should use provided id prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        style="--uv_1d8tbmb0: 100%;"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <label
            class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsl uv_1do42ls1a uv_1do42ls32"
            for="custom-file-input-field-id"
          >
            Test files
          </label>
          <input
            class="uv_z4f2649"
            id="custom-file-input-field-id"
            name="Test files"
            type="file"
          />
          <div
            class="uv_z4f2640 uv_z4f2642 uv_z4f2644"
            data-testid="drag-container"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzi uv_icons_1sbwqkz1g"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
              />
              <path
                d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
            <div
              class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42ls16 uv_1do42ls1a uv_1do42ls32"
              style="--uv_1giziax0: left;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
